# taggivm

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: cli.py  config.py  db_init.py  scanner.py  schema.sql  sources.json
src/core/: __init__.py  config.py  models.py
src/db/: __init__.py  base_rep.py  db_init.py  music_rep.py  track_rep.py
src/db/domain/: RYMGenreHierarchy.json  RYMGenreHierarchy.yaml  clean_tree.py  genre_tree.json  path.py  schema.sql  sources.json
src/services/: __init__.py  scanner.py
